<resources>
    <string name="app_name">Hoo is That?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_history">History</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_page_label">Hoo is That?</string>
    <string name="results_label">Results</string>
    <string name="info_label">Info</string>

    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="read_more">Read More</string>
    <string name="howler_monkey">Howler Monkey</string>
    <string name="snub_nose_monkey">Snub-Nosed Monkey</string>
    <string name="howler_accuracy">95%</string>
    <string name="snub_monkey_accuracy">10%</string>

    <string name="howler_featured_fact">Howler monkeys are famous for their loud howls, which can travel more than one mile through dense rain forest.</string>
    <string name="class_title">Class:</string>
    <string name="howler_class">Mammalia</string>
    <string name="order_title">Order:</string>
    <string name="howler_order">Primates</string>
    <string name="family_title">Family:</string>
    <string name="howler_family">Atelidae</string>
    <string name="weight_title">Weight:</string>
    <string name="howler_weight">15 to 22 lbs</string>
    <string name="diet_title">Diet:</string>
    <string name="howler_diet">Top canopy leaves, fruit, buds, flowers, and nuts.</string>

    <string name="snubnose_featured_fact">Snub-nosed monkeys are highly social. They form large troops in the summer of as many as 600 individuals.</string>
    <string name="snubnose_class">Mammalia</string>
    <string name="snubnose_order">Primates</string>
    <string name="snubnose_family">Cercopithecidae</string>
    <string name="snubnose_weight">14 to 85 lbs</string>
    <string name="snubnose_diet">Pine needles and young firs, supplemented by bamboo shoots, leaves, buds and fruits.</string>

    <string name="play_description">Image of play icon for animal sound</string>
    <string name="howler_distribution_description">Image of howler distribution map</string>
    <string name="snubnose_distribution_description">Image of snub-nose distribution map</string>
    <string name="howler_description">Image of a howler monkey</string>
    <string name="snub_monkey_description">Image of a Snub-Nosed Monkey</string>
</resources>