<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.info.InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/howlerInfoHeader"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/howlerInfoImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/howler"
                android:contentDescription="@string/howler_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:background="#95FFFFFF"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/HowlerInfoPageTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/howler_monkey"
                    android:textColor="@color/blue_700"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/playHowlerSound"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/play_description"
            android:src="@drawable/play" />

        <TextView
            android:id="@+id/howlerFeaturedFact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/howler_featured_fact"
            android:textColor="@color/blue_700"
            android:textSize="22sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/classTitle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/class_title" />

            <TextView
                android:id="@+id/howlerClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/howler_class" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/orderTitle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/order_title" />

            <TextView
                android:id="@+id/howlerOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/howler_order" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/familyTitle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/family_title" />

            <TextView
                android:id="@+id/howlerfamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/howler_family" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/weightTitle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/weight_title" />

            <TextView
                android:id="@+id/howlerWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/howler_weight" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/dietTitle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/diet_title" />

            <TextView
                android:id="@+id/howlerDiet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/howler_diet" />

        </LinearLayout>

        <ImageView
            android:id="@+id/HowlerDistributionMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/howler_distribution"
            android:contentDescription="@string/howler_distribution_description" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>