<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.info.HowlerInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/snubnoseInfoHeader"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/snubnoseInfoImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/snubnose"
                android:contentDescription="@string/snub_monkey_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:background="#95FFFFFF"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/snubnoseInfoPageTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/snub_nose_monkey"
                    android:textColor="@color/blue_700"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/playSnubnoseSound"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/play_description"
            android:src="@drawable/play" />

        <TextView
            android:id="@+id/snubnoseFeaturedFact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/snubnose_featured_fact"
            android:textColor="@color/blue_700"
            android:textSize="22sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/classTitle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/class_title" />

            <TextView
                android:id="@+id/snubnoseClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/snubnose_class" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/orderTitle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/order_title" />

            <TextView
                android:id="@+id/snubnoseOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/snubnose_order" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/familyTitle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/family_title" />

            <TextView
                android:id="@+id/snubnosefamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/snubnose_family" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/weightTitle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/weight_title" />

            <TextView
                android:id="@+id/howlerWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/snubnose_weight" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/dietTitle"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/diet_title" />

            <TextView
                android:id="@+id/howlerDiet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:textColor="@color/blue_700"
                android:text="@string/snubnose_diet" />

        </LinearLayout>

        <ImageView
            android:id="@+id/HowlerDistributionMap"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:contentDescription="@string/snubnose_distribution_description"
            android:src="@drawable/snubnose_distribution"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>