<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#83FFFFFF"
    tools:context=".ui.results.ResultsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/howlerCard"
            android:layout_width="325dp"
            android:layout_height="190dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/howlerImage"
                android:layout_width="325dp"
                android:layout_height="200dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/howler_description"
                android:src="@drawable/howler" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/howler_accuracy"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:background="#95FFFFFF"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/howler_monkey"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/read_more"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/snubnoseCard"
                android:layout_width="325dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:layout_width="325dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/snub_monkey_description"
                    android:src="@drawable/snubnose" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/snub_monkey_accuracy"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:background="#95FFFFFF"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/snub_nose_monkey"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:fontFamily="sans-serif-thin"
                        android:text="@string/read_more"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>